@@ -14,6 +14,7 @@ item.scalinghealth:CrystalShard.name=Heart Crystal Shard
 item.scalinghealth:DifficultyChanger0.name=Enchanted Heart
 item.scalinghealth:DifficultyChanger1.name=Cursed Heart
 item.scalinghealth:HeartContainer.name=Heart Container
+item.scalinghealth:HeartContainer.notEnoughXP=You need %d XP levels to use this
 item.scalinghealth:HeartDust.name=Heart Dust
 item.scalinghealth:HealingItem0.name=Bandages
 item.scalinghealth:HealingItem1.name=Medkit
