@@ -1,4 +1,5 @@
 1.3.12
+Added: Config for XP cost to use heart containers (default is 3 levels)
 Added: Config for food consumption (exhaustion) of bonus player regen. Value also increased. Default is 0.1 (still many times less than vanilla regen), old value was 0.025.
 Added: Particle effects for heart container and cursed/enchanted hearts (#57)
 Added: Sound effects for cursed/enchanted hearts (#57)
